--- a/scss/style.scss
+++ b/scss/style.scss
@@ -426,6 +426,7 @@ h1, h2, h3, h4, h5,
 				.one-third{
 					width: 60%;
 					position: relative;
+				
 					// height: 650px;
 					z-index: -1;
 					.overlay{
@@ -452,6 +453,45 @@ h1, h2, h3, h4, h5,
 					}
 				}
 				.one-forth{
+					width: 50%;
+					position: relative;
+					@include media-breakpoint-up(md){
+						position: absolute;
+						top: 0;
+						left: 0;
+						bottom: 0;
+						right: 0;
+						width: 1200px;
+						margin: 0 auto;
+					}
+					@include media-breakpoint-down(md){
+						width: 100%;
+						position: absolute;
+						top: 0;
+						left: 0;
+						right: 0;
+						bottom: 0;
+						z-index: 1;
+						padding: 1em;
+					}
+					.text{
+						width: 100%;
+						@include media-breakpoint-up(lg){
+							position: absolute;
+							top: 50%;
+							left: 0;
+							transform: translateY(-50%);
+							right: 0;
+							// width: 1200px;
+							max-width: 50%;
+							padding-left: 45px;
+							padding-right: 3em;
+						}
+					}
+				}
+
+
+				.one{
 					width: 50%;
 					position: relative;
 					@include media-breakpoint-up(md){
